--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;900&display=swap");
 @import "tailwindcss";
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,4 +23,94 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.topbar {
+  width: 191px;
+  height: 42px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 10;
+  padding: 10px;
+  display: flex; /* Enables flexbox */
+  align-items: center; /* Aligns items vertically */
+  justify-content: space-between; /* Even spacing (optional) */
+  gap: 10px; /* Adds space between buttons */
+}
+.topbar-goback {
+  width: 81px;
+  height: 32px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #5063cd;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  text-align: center;
+  font-family: "Maven Pro";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  cursor: pointer;
+}
+
+.topbar-selector {
+  width: 81px;
+  height: 32px;
+  flex-shrink: 0;
+  color: #fff;
+  text-align: center;
+  font-family: "Maven Pro";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  cursor: pointer;
+  border-radius: 15px;
+  background: #e38c29;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.estab-visualization {
+  width: 250px;
+  height: 250px;
+  flex-shrink: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+  position: fixed;
+  top: 15%;
+  right: 20px;
+
+  background: white;
+  z-index: 1000;
+  border-radius: 15px;
+
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.estab-visualization::-webkit-scrollbar {
+  display: none;
+}
+
+.estab-visualization-header {
+  padding-top: 10px;
+  background: #5063cd;
+  box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 0.25);
+  width: 250px;
+  height: 34;
+  color: #e38c29;
+  text-align: center;
+  font-family: "Maven Pro";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
 }
